--- a/index.html
+++ b/index.html
@@ -42,15 +42,19 @@
           </nav>
           <div class="contact-wrapper">
             <ul class="li-no-dots contact-links-wrapper">
-              <li class="contact-list">
+              <li>
                 <a
                   href="mailto:info@devstudio.com"
                   class="contact link-no-underline"
+                  ><svg class="gray-mail-phone" width="16" height="12">
+                    <use href="./images/icons.svg#icon-envelope"></use></svg
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="contact-list">
+              <li>
                 <a href="tel:+48111111111" class="contact link-no-underline"
+                  ><svg class="gray-mail-phone" width="10" height="16">
+                    <use href="./images/icons.svg#icon-smartphone"></use></svg
                   >+48 111 111 111</a
                 >
               </li>
@@ -73,6 +77,11 @@
       <div class="container">
         <ul class="main-strenghts li-no-dots">
           <li class="strenght">
+            <div class="strenght-icon-container">
+              <svg class="strenght-icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-antenna-1"></use>
+              </svg>
+            </div>
             <h3 class="header-three">Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -80,6 +89,11 @@
             </p>
           </li>
           <li class="strenght">
+            <div class="strenght-icon-container">
+              <svg class="strenght-icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-clock-1"></use>
+              </svg>
+            </div>
             <h3 class="header-three">Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -87,6 +101,11 @@
             </p>
           </li>
           <li class="strenght">
+            <div class="strenght-icon-container">
+              <svg class="strenght-icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-diagram-1"></use>
+              </svg>
+            </div>
             <h3 class="header-three">Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -94,6 +113,11 @@
             </p>
           </li>
           <li class="strenght">
+            <div class="strenght-icon-container">
+              <svg class="strenght-icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
+              </svg>
+            </div>
             <h3 class="header-three">Lorem ipsum</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
