--- a/portfolio.html
+++ b/portfolio.html
@@ -42,15 +42,19 @@
           </nav>
           <div class="contact-wrapper">
             <ul class="li-no-dots contact-links-wrapper">
-              <li class="contact-list">
+              <li>
                 <a
                   href="mailto:info@devstudio.com"
                   class="contact link-no-underline"
+                  ><svg class="gray-mail-phone" width="16" height="12">
+                    <use href="./images/icons.svg#icon-envelope"></use></svg
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="contact-list">
+              <li>
                 <a href="tel:+48111111111" class="contact link-no-underline"
+                  ><svg class="gray-mail-phone" width="10" height="16">
+                    <use href="./images/icons.svg#icon-smartphone"></use></svg
                   >+48 111 111 111</a
                 >
               </li>
