--- a/index.html
+++ b/index.html
@@ -174,6 +174,42 @@
               />
               <h4 class="header-four">John Doe</h4>
               <p class="picture-text">Product Designer</p>
+              <div class="team-eicons-box">
+                <ul class="eicons-wrapper li-no-dots">
+                  <li>
+                    <a href="#" class="eicon-bcg"
+                      ><svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-instagram-2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-twitter-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="picture-team-member">
               <img
@@ -185,6 +221,42 @@
               />
               <h4 class="header-four">John Doe</h4>
               <p class="picture-text">Frontend Developer</p>
+              <div class="team-eicons-box">
+                <ul class="eicons-wrapper li-no-dots">
+                  <li>
+                    <a href="#" class="eicon-bcg"
+                      ><svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-instagram-2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-twitter-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="picture-team-member">
               <img
@@ -196,6 +268,42 @@
               />
               <h4 class="header-four">John Doe</h4>
               <p class="picture-text">Marketing</p>
+              <div class="team-eicons-box">
+                <ul class="eicons-wrapper li-no-dots">
+                  <li>
+                    <a href="#" class="eicon-bcg"
+                      ><svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-instagram-2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-twitter-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="picture-team-member">
               <img
@@ -207,10 +315,97 @@
               />
               <h4 class="header-four">John Doe</h4>
               <p class="picture-text">UI Designer</p>
+              <div class="team-eicons-box">
+                <ul class="eicons-wrapper li-no-dots">
+                  <li>
+                    <a href="#" class="eicon-bcg"
+                      ><svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-instagram-2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-twitter-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="eicon-bcg">
+                      <svg class="team-eicon" width="20" height="20">
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
       </section>
+      <div class="container">
+        <section class="section">
+          <h2 class="header-two">Nasi klienci</h2>
+          <ul class="icons-clients-wrapper li-no-dots">
+            <li>
+              <a href="#" class="icon-client"
+                ><svg class="client-logo" width="170" height="92">
+                  <use href="./images/icons.svg#icon-client-1-yaco"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="icon-client"
+                ><svg class="client-logo" width="170" height="92">
+                  <use
+                    href="./images/icons.svg#icon-client-2-company-th"
+                  ></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="icon-client"
+                ><svg class="client-logo" width="170" height="92">
+                  <use
+                    href="./images/icons.svg#icon-client-3-company"
+                  ></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="icon-client"
+                ><svg class="client-logo" width="170" height="92">
+                  <use
+                    href="./images/icons.svg#icon-client-4-fospet"
+                  ></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="icon-client"
+                ><svg class="client-logo" width="170" height="92">
+                  <use href="./images/icons.svg#icon-client-5-brand"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="icon-client"
+                ><svg class="client-logo" width="170" height="92">
+                  <use
+                    href="./images/icons.svg#icon-client-6-company-tagline"
+                  ></use></svg
+              ></a>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer class="footer">
       <div class="container">
