First final version
ver. 1.0

--- a/index.html
+++ b/index.html
@@ -408,31 +408,62 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="footer-logo-wrapper">
-          <a href="./index.html" class="link-no-underline footer-logo"
-            ><span class="logo-blue-footer">Web</span
-            ><span class="logo-white-footer">Studio</span></a
-          >
+      <div class="container footer-content-wrapper">
+        <div class="side-l-footer">
+          <div class="footer-logo-wrapper">
+            <a href="./index.html" class="link-no-underline footer-logo"
+              ><span class="logo-blue-footer">Web</span
+              ><span class="logo-white-footer">Studio</span></a
+            >
+          </div>
+          <div class="contact-items">
+            <address class="address-text">
+              m. Warszawa, Aleje Jerozolimskie 21
+            </address>
+            <ul class="li-no-dots">
+              <li class="contact-li">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="contact-footer link-no-underline"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="contact-li">
+                <a
+                  href="tel:+48111111111"
+                  class="contact-footer link-no-underline"
+                  >+48 111 111 111</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-        <address class="address-text">
-          m. Warszawa, Aleje Jerozolimskie 21
-        </address>
-        <div class="contact-item">
-          <ul class="li-no-dots">
+        <div class="eicons-footer">
+          <h5 class="header-five">Dołącz do nas</h5>
+          <ul class="eicons-footer-list li-no-dots">
             <li>
-              <a
-                href="mailto:info@devstudio.com"
-                class="contact-footer link-no-underline"
-                >info@devstudio.com</a
-              >
+              <a href="#" class="eicon-footer-bcg"
+                ><svg class="eicon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram-2"></use></svg
+              ></a>
             </li>
             <li>
-              <a
-                href="tel:+48111111111"
-                class="contact-footer link-no-underline"
-                >+48 111 111 111</a
-              >
+              <a href="#" class="eicon-footer-bcg">
+                <svg class="eicon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter-1"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="eicon-footer-bcg">
+                <svg class="eicon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook-1"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="eicon-footer-bcg">
+                <svg class="eicon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -440,18 +471,3 @@
     </footer>
   </body>
 </html>
-
-<!-- <li>
-  <figure class="picture-team-member">
-    <img
-      src="./images/manone.jpg"
-      alt="Projektant produktu"
-      width="270"
-      height="260"
-    />
-    <figcaption>
-      <h4 class="header-four"><strong>John Doe</strong></h4>
-      <p class="picture-text">Product Designer</p>
-    </figcaption>
-  </figure>
-</li> -->
