--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
               width="370"
               height="294"
             />
-            <div>
+            <div class="frame">
               <h4 class="header-four-portfolio">Technocrack</h4>
               <p class="picture-text-portfolio">Strona internetowa</p>
             </div>
@@ -94,7 +94,7 @@
               width="370"
               height="294"
             />
-            <div>
+            <div class="frame">
               <h4 class="header-four-portfolio">
                 Grafika New Orlean vs Golden Star
               </h4>
@@ -109,7 +109,7 @@
               width="370"
               height="294"
             />
-            <div>
+            <div class="frame">
               <h4 class="header-four-portfolio">Restauracja Seafood</h4>
               <p class="picture-text-portfolio">Aplikacja</p>
             </div>
@@ -122,7 +122,7 @@
               width="370"
               height="294"
             />
-            <div>
+            <div class="frame">
               <h4 class="header-four-portfolio">Projekt Prime</h4>
               <p class="picture-text-portfolio">Marketing</p>
             </div>
@@ -135,7 +135,7 @@
               width="370"
               height="294"
             />
-            <div>
+            <div class="frame">
               <h4 class="header-four-portfolio">Projekt Boxes</h4>
               <p class="picture-text-portfolio">Aplikacja</p>
             </div>
@@ -148,7 +148,7 @@
               width="370"
               height="294"
             />
-            <div>
+            <div class="frame">
               <h4 class="header-four-portfolio">Inspiration has no Borders</h4>
               <p class="picture-text-portfolio">Strona internetowa</p>
             </div>
@@ -161,7 +161,7 @@
               width="370"
               height="294"
             />
-            <div>
+            <div class="frame">
               <h4 class="header-four-portfolio">Magazyn Limited Edition</h4>
               <p class="picture-text-portfolio">Dizajn</p>
             </div>
@@ -174,7 +174,7 @@
               width="370"
               height="294"
             />
-            <div>
+            <div class="frame">
               <h4 class="header-four-portfolio">Projekt LAB</h4>
               <p class="picture-text-portfolio">Marketing</p>
             </div>
@@ -187,7 +187,7 @@
               width="370"
               height="294"
             />
-            <div>
+            <div class="frame">
               <h4 class="header-four-portfolio">Growing Business</h4>
               <p class="picture-text-portfolio">Aplikacja</p>
             </div>
@@ -196,29 +196,62 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="footer-logo-wrapper">
-          <a href="./index.html" class="link-no-underline footer-logo"
-            ><span class="logo-blue-footer">Web</span
-            ><span class="logo-white-footer">Studio</span></a
-          >
+      <div class="container footer-content-wrapper">
+        <div class="side-l-footer">
+          <div class="footer-logo-wrapper">
+            <a href="./index.html" class="link-no-underline footer-logo"
+              ><span class="logo-blue-footer">Web</span
+              ><span class="logo-white-footer">Studio</span></a
+            >
+          </div>
+          <div class="contact-items">
+            <address class="address-text">
+              m. Warszawa, Aleje Jerozolimskie 21
+            </address>
+            <ul class="li-no-dots">
+              <li class="contact-li">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="contact-footer link-no-underline text-decor"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="contact-li">
+                <a
+                  href="tel:+48111111111"
+                  class="contact-footer link-no-underline"
+                  >+48 111 111 111</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-        <address class="address-text">
-          m. Warszawa, Aleje Jerozolimskie 21
-        </address>
-        <div class="contact-item">
-          <ul class="li-no-dots">
+        <div class="eicons-footer">
+          <h5 class="header-five">Dołącz do nas</h5>
+          <ul class="eicons-footer-list li-no-dots">
             <li>
-              <a href="mailto:info@devstudio.com" class="contact-footer"
-                >info@devstudio.com</a
-              >
+              <a href="#" class="eicon-footer-bcg"
+                ><svg class="eicon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram-2"></use></svg
+              ></a>
             </li>
             <li>
-              <a
-                href="tel:+48111111111"
-                class="contact-footer link-no-underline"
-                >+48 111 111 111</a
-              >
+              <a href="#" class="eicon-footer-bcg">
+                <svg class="eicon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter-1"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="eicon-footer-bcg">
+                <svg class="eicon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook-1"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="eicon-footer-bcg">
+                <svg class="eicon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
